# rstk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Untitled Diagram.drawio  build.sh  model.pkl  pyproject.toml  setup.py
.github/workflows/: docs.yml  test.yml
docs/: conf.py  index.rst  modules.rst  rstk.algo.content_based.rst  rstk.algo.rst  rstk.data.rst  rstk.rst
examples/: build-model.sh  dataset.csv  model.pkl
examples/building-models/: README.md  build_model.py  dataset.csv  use_model.py
examples/preprocessing/: README.md  dataset.csv  prepreocessed.csv  preprocess.py  preprocessed.csv
models/: knn.pkl
scripts/: build.sh
src/: cli.py  preprocessor.py
src/algo/content_based/: knn.py
src/rstk/: adapter.py  cli.py  data.py  dataset.py  engine.py  model.py  preprocess.py  recommender.py  serializable.py  server.py  types.py
src/rstk/algo/content_based/: knn.py
src/rstk/data/: dataset.py  types.py
tasks/: build-docs.sh  coverage-report.sh  deploy.sh  interrogate.sh
test/: conftest.py  test_content_knn.py  test_preprocessor.py
tests/: _content_knn.py  conftest.py  test_adapter.py  test_cli.py  test_content_knn.py  test_data.py  test_dataset.py  test_engine.py  test_model.py  test_preprocessor.py  test_server.py  test_types.py
