[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rstk"
version = "0.2.0"
dependencies = ["click", "pandas", "numpy", "scikit-learn", "flask"]
authors = [{ name = "Nikola Ratinac", email = "nikola.ratinac@gmail.com" }]
description = "Lightweight recommender system toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
rstk = "rstk.cli:main"

[project.urls]
Repository = "https://github.com/rat-nick/rstk.git"
