[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rstk"
version = "0.2.0"
dependencies = ["click", "pandas", "numpy", "scikit-learn", "flask"]
authors = [{ name = "Nikola Ratinac", email = "nikola.ratinac@gmail.com" }]
description = "Lightweight recommender system toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
rstk = "rstk.cli:main"

[project.urls]
Repository = "https://github.com/rat-nick/rstk.git"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
